Update project page

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -22,6 +22,7 @@
 @import "components/gallery";
 @import "components/card";
 @import "components/hamburger";
+@import "components/carousel";
 
 @import "elements/button";
 
