--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -46,7 +46,8 @@
   border: 1px solid hsla(0, 0, 0%, 1);
   color: black;
   font-size: 0.65rem;
-  min-width: calc(4ch + 0.666em + 0.666em);
+  letter-spacing: $letter-spacing;
+  min-width: 50px;
   opacity: 0.5;
   padding: 0.2em 0.666em;
   position: relative;
