--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -41,9 +41,10 @@ $card-height-mobile: 200px;
   figcaption {
     // border-bottom: 2px solid;
     color: $body-text-color;
-    font-size: $font-size-2;
+    font-size: $font-size-s1;
+    letter-spacing: $letter-spacing;
     line-height: 2;
-    text-transform: capitalize;
+    text-transform: uppercase;
 
     &:after {
       // content: "→";
