--- a/src/styles/components/_hamburger.scss
+++ b/src/styles/components/_hamburger.scss
@@ -1,8 +1,8 @@
-$hamburger-height: 10px;
+$hamburger-height: 12px;
 $hamburger-width: 20px;
 $hamburger-color: black;
 
-$hamburger-bar-height: 2px;
+$hamburger-bar-height: 4px;
 
 .hamburger-button {
   display: flex;
@@ -12,10 +12,8 @@ $hamburger-bar-height: 2px;
 }
 
 .hamburger {
-  display: inline-flex;
-  flex-direction: column;
   height: $hamburger-height;
-  justify-content: space-between;
+  position: relative;
   width: $hamburger-width;
 
   &:before,
@@ -23,9 +21,20 @@ $hamburger-bar-height: 2px;
     content: "";
     background-color: $hamburger-color;
     height: $hamburger-bar-height;
+    position: absolute;
     transition: transform $transition-speed $transition-timing-function;
     width: 100%;
     will-change: transform;
+  }
+
+  &:before {
+    left: 0;
+    top: 0;
+  }
+
+  &:after {
+    bottom: 0;
+    left: 0;
   }
 
   .mobile-menu-open & {
@@ -35,13 +44,11 @@ $hamburger-bar-height: 2px;
     }
 
     &:before {
-      transform: rotate(45deg) translate3d(0, -4px, 0);
-      transform-origin: top left;
+      transform: translate3d(0, 4px, 0) rotate(45deg);
     }
 
     &:after {
-      transform: rotate(-45deg) translate3d(0, 4px, 0);
-      transform-origin: bottom left;
+      transform: translate3d(0, -4px, 0) rotate(-45deg);
     }
   }
 }
