--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -5,7 +5,7 @@ nav {
   height: 100vh;
   left: 0;
   opacity: 0;
-  padding: calc(var(--header-height) + 3rem) $page-padding-x-mobile 1rem;
+  padding: 0 $page-padding-x-mobile 1rem;
   pointer-events: none;
   position: absolute;
   right: 0;
@@ -33,6 +33,7 @@ nav {
     display: flex;
     flex-direction: column;
     flex: 1;
+    justify-content: center;
     margin: 0;
     padding: 0;
   }
@@ -40,9 +41,6 @@ nav {
   li {
     border-bottom: 1px solid hsla(0, 0, 0, 0.25);
     display: flex;
-    letter-spacing: $letter-spacing;
-    font-size: 1.5rem;
-    text-transform: uppercase;
 
     &:first-of-type {
       // display: none;
@@ -58,11 +56,12 @@ nav {
 
     a {
       color: black;
-      // letter-spacing: var(--letter-spacing);
+      letter-spacing: $letter-spacing;
+      font-size: $font-size-4;
       line-height: 1;
       padding: 0.35em 0;
       text-decoration: none;
-      // text-transform: uppercase;
+      text-transform: uppercase;
 
       &.active {
         // color: hsl(0, 0%, 50%);
