Remove touch effect on mobile

--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -24,6 +24,10 @@
   padding-left: $page-padding-x-mobile;
   padding-right: $page-padding-x-mobile;
 
+  * {
+    -webkit-tap-highlight-color: transparent;
+  }
+
   a {
     color: white;
     display: flex;
