--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -114,7 +114,7 @@ $gutter-size: 3rem;
         }
 
         figcaption {
-          border-bottom: 2px solid;
+          // border-bottom: 2px solid;
           // opacity: 1;
           // transform: translate3d(0, 0, 0);
           // transition: opacity var(--transition-speed) var(--transition-timing-function), transform var(--transition-speed) var(--transition-timing-function);
