--- a/src/styles/layout/_hero.scss
+++ b/src/styles/layout/_hero.scss
@@ -6,6 +6,7 @@
   transform: translate3d(0, calc(var(--scroll-y) * 0.4px), 0);
 
   @include respond-to("desktop") {
+    display: none;
     margin-right: -2rem;
   }
 
@@ -78,4 +79,8 @@
   position: absolute;
   right: 0;
   top: 0;
+
+  @include respond-to(desktop) {
+    display: none;
+  }
 }
