--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -25,8 +25,10 @@ nav {
     opacity: 1;
     pointer-events: auto;
     position: fixed;
+    right: auto;
     top: 0;
-    z-index: 1000;
+    width: 300px;
+    z-index: 1;
   }
 
   ul {
