--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -28,6 +28,8 @@ $base-font-size: 21;
 
 $page-padding-x-mobile: 1rem;
 
+$header-desktop-width: 300px;
+
 :root {
   --base-font-size-mobile: #{$base-font-size-mobile};
   --base-font-size: #{$base-font-size};
