--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -7,7 +7,8 @@ $card-height-mobile: 275px;
 
   @include respond-to("desktop") {
     columns: 2;
-    column-gap: 6rem;
+    column-gap: 3rem;
+    max-width: none;
   }
 
   h1 {
