--- a/src/styles/layout/_nav.scss
+++ b/src/styles/layout/_nav.scss
@@ -27,6 +27,7 @@ nav {
     padding: 0;
     pointer-events: auto;
     position: static;
+    width: 100%;
   }
 
   ul {
@@ -67,11 +68,13 @@ nav {
       text-transform: uppercase;
 
       @include respond-to(desktop) {
+        flex: 1;
         font-size: $font-size-1;
+        padding-left: 1rem;
       }
 
       &.active {
-        // color: hsl(0, 0%, 50%);
+        background-color: $body-bg-color;
       }
     }
   }
@@ -81,6 +84,7 @@ nav {
 
     @include respond-to("desktop") {
       display: block;
+      margin: 0 1rem;
     }
 
     margin-top: auto;
