--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -23,6 +23,7 @@
 @import "components/card";
 @import "components/hamburger";
 @import "components/carousel";
+@import "components/home-carousel";
 
 @import "elements/button";
 
