--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,9 +13,10 @@
 @import "page/project";
 
 @import "layout/layout";
+@import "layout/menu";
 @import "layout/footer";
 @import "layout/header";
-@import "layout/nav";
+// @import "layout/nav";
 @import "layout/lightbox";
 @import "layout/hero";
 
