--- a/src/styles/utilities/_helpers.scss
+++ b/src/styles/utilities/_helpers.scss
@@ -2,7 +2,8 @@
   overflow: hidden;
 }
 
-.visually-hidden {
+.visually-hidden,
+.sr-only {
   position: absolute;
   overflow: hidden;
   clip: rect(0 0 0 0);
