--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -8,22 +8,6 @@ $gutter-size: 3rem;
 
 .gallery {
   position: relative;
-
-  header {
-    align-items: center;
-    background-color: $body-bg-color;
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 1rem;
-
-    @include respond-to("desktop") {
-      justify-content: space-between;
-    }
-
-    button {
-      @include gallery-button;
-    }
-  }
 }
 
 .gallery-filters {
@@ -54,11 +38,15 @@ $gutter-size: 3rem;
   display: none;
 
   @include respond-to(desktop) {
+    align-items: center;
+    border-bottom: 1px solid hsla(0, 0, 0, 0.5);
     display: flex;
+    margin-bottom: 1rem;
+    padding-bottom: 1rem;
   }
 
-  button:first-child {
-    transform: translateX(1px);
+  button {
+    @include gallery-button;
   }
 }
 
@@ -86,7 +74,7 @@ $gutter-size: 3rem;
     &:after {
       background-color: hsla(0, 0%, 100%, 0.2);
       bottom: 0;
-      content: "";
+      // content: "";
       left: 0;
       opacity: 0;
       position: absolute;
@@ -103,33 +91,46 @@ $gutter-size: 3rem;
         }
 
         figcaption {
-          // border-bottom: 2px solid;
-          // opacity: 1;
-          // transform: translate3d(0, 0, 0);
-          // transition: opacity var(--transition-speed) var(--transition-timing-function), transform var(--transition-speed) var(--transition-timing-function);
+          &:after {
+            opacity: 0.8;
+          }
         }
       }
     }
 
     figure {
       img {
-        // display: inline-block;
-        // height: auto;
-        // width: 100%
+        opacity: 0;
+        transition: opacity 1s ease-in-out;
+
+        &.active {
+          opacity: 1;
+        }
+
+        &:not(:first-child) {
+          bottom: 0;
+          left: 0;
+          position: absolute;
+          right: 0;
+          top: 0;
+        }
       }
 
       figcaption {
         font-size: $font-size-s1;
-        // border-bottom: 2px solid transparent;
-        // color: hsl(0, 0, 20%);
-        // opacity: 0;
-        // transform: translate3d(0, -50%, 0);
-        // display: inline-block;
-        // line-height: 1.2;
-        // transition: border-color var(--transition-speed);s
-        // transition: opacity var(--transition-speed) var(--transition-timing-function), transform 0s var(--transition-timing-function) var(--transition-speed);
 
-        // will-change: transform;
+        &:after {
+          background: black;
+          content: "";
+          height: 1px;
+          left: 0;
+          opacity: 0;
+          position: absolute;
+          right: 0;
+          top: 100%;
+          transition: 0.5s ease;
+          width: 100%;
+        }
       }
     }
   }
