--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -12,6 +12,7 @@
   color: $menu-color;
   display: inline-flex;
   line-height: 1.85;
+  padding: 0 1rem;
   text-decoration: none;
   text-transform: capitalize;
   transition: opacity 0.2s ease-out;
@@ -22,7 +23,9 @@
   }
 
   &.active {
-    opacity: 0.7;
+    background-color: $active-menu-item-bg-color;
+    cursor: default;
+    pointer-events: none;
   }
 }
 
@@ -32,25 +35,22 @@ aside {
   @include respond-to($menu-switch-breakpoint) {
     background: $menu-bg-color;
     display: flex;
+    flex-direction: column;
     height: 100vh;
+    min-width: $aside-width;
+    padding: 2rem 0 1rem;
     position: sticky;
     top: 0;
     transition: 0.2s ease;
     width: $aside-width;
     z-index: 2;
 
-    > div {
-      display: flex;
-      flex-direction: column;
-      padding: 2rem 1rem 1rem;
-      transition: 0.2s ease;
-      min-width: $aside-width;
-    }
-
     h3 {
+      font-size: $font-size-2;
       font-weight: 500;
       letter-spacing: 0.045em;
       margin-bottom: 2rem;
+      margin-left: 1rem;
       text-transform: uppercase;
       white-space: nowrap;
 
@@ -61,7 +61,8 @@ aside {
     }
 
     footer {
-      border-top: 1px solid $menu-color;
+      display: flex;
+      flex-direction: column;
       margin-top: auto;
       padding-top: 1rem;
 
@@ -90,6 +91,7 @@ aside {
       color: $menu-color;
       display: inline-flex;
       line-height: 1.85;
+      padding: 0 1rem;
       margin: 0;
     }
   }
@@ -106,10 +108,12 @@ aside {
 
 nav {
   li {
+    display: flex;
     list-style-type: none;
 
     a {
       @include menu-link();
+      flex-grow: 1;
     }
   }
 
@@ -117,9 +121,10 @@ nav {
     ul {
       margin-bottom: 1rem;
 
-      &.nav-menu {
-        border-bottom: 1px solid $menu-color;
-        padding-bottom: 1rem;
+      &.nav-tags {
+        a {
+          font-size: $font-size-2;
+        }
       }
     }
   }
