--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -28,10 +28,11 @@ html {
 }
 
 body {
-  font-family: NeuzeitGro-Reg, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  // font-family: NeuzeitGro-Reg, "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 1em;
   font-style: normal;
-  font-weight: normal;
+  font-weight: 300;
   line-height: var(--line-height);
 }
 
@@ -48,5 +49,6 @@ h6 {
 
 b,
 strong {
-  @include font-bold;
+  // @include font-bold;
+  font-weight: 500;
 }
