--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -40,12 +40,9 @@ $card-height-mobile: 275px;
   }
 
   figcaption {
-    // border-bottom: 2px solid;
     color: $body-text-color;
-    font-size: $font-size-s1;
-    letter-spacing: $letter-spacing;
+    font-size: $font-size-2;
     line-height: 2;
-    text-transform: uppercase;
 
     &:after {
       // content: "→";
