--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -3,7 +3,7 @@
   height: 100%;
 
   > * {
-    background-color: var(--project-bg-color, black);
+    background-color: hsl(0, 0%, 98%);
     min-width: 100%;
   }
 
@@ -44,7 +44,7 @@
       justify-content: center;
       border-radius: 50%;
       height: 50px;
-      opacity: 0;
+      // opacity: 0;
       padding: 0.75rem;
       transition: opacity 0.1s ease, transform 0.2s ease;
       width: 50px;
