--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -39,7 +39,7 @@ $gutter-size: 3rem;
 
   @include respond-to(desktop) {
     align-items: center;
-    border-bottom: 1px solid hsla(0, 0, 0, 0.5);
+    // border-bottom: 1px solid hsla(0, 0, 0, 0.5);
     display: flex;
     margin-bottom: 1rem;
     padding-bottom: 1rem;
@@ -113,23 +113,6 @@ $gutter-size: 3rem;
           position: absolute;
           right: 0;
           top: 0;
-        }
-      }
-
-      figcaption {
-        font-size: $font-size-s1;
-
-        &:after {
-          background: black;
-          content: "";
-          height: 1px;
-          left: 0;
-          opacity: 0;
-          position: absolute;
-          right: 0;
-          top: 100%;
-          transition: 0.5s ease;
-          width: 100%;
         }
       }
     }
