--- a/src/styles/layout/_menu.scss
+++ b/src/styles/layout/_menu.scss
@@ -11,21 +11,23 @@
 @mixin menu-link {
   color: $menu-color;
   display: inline-flex;
-  line-height: 1.85;
-  padding: 0 1rem;
+  letter-spacing: 0.15em;
+  line-height: 2.5;
+  padding: 0 $aside-padding-horizontal;
   text-decoration: none;
-  text-transform: capitalize;
+  text-transform: uppercase;
   transition: opacity 0.2s ease-out;
   white-space: nowrap;
 
   &:hover {
-    opacity: 0.7;
+    // opacity: 0.7;
+    background-color: $active-menu-item-hover-color;
   }
 
   &.active {
     background-color: $active-menu-item-bg-color;
-    cursor: default;
-    pointer-events: none;
+    color: white;
+    font-weight: 400;
   }
 }
 
@@ -38,7 +40,7 @@ aside {
     flex-direction: column;
     height: 100vh;
     min-width: $aside-width;
-    padding: 2rem 0 1rem;
+    padding: 0 0 1rem;
     position: sticky;
     top: 0;
     transition: 0.2s ease;
@@ -46,16 +48,18 @@ aside {
     z-index: 2;
 
     h3 {
-      font-size: $font-size-2;
-      font-weight: 500;
-      letter-spacing: 0.045em;
-      margin-bottom: 2rem;
-      margin-left: 1rem;
+      border-bottom: 1px solid hsla(0, 0%, 100%, 0.2);
+      font-weight: 400;
+      letter-spacing: 0.15em;
+      margin-bottom: 1rem;
       text-transform: uppercase;
       white-space: nowrap;
 
       a {
         color: $menu-color;
+        display: block;
+        line-height: 2.5;
+        padding: 1rem $aside-padding-horizontal;
         text-decoration: none;
       }
     }
@@ -72,7 +76,18 @@ aside {
       }
 
       a {
-        @include menu-link();
+        color: $menu-color;
+        display: inline-flex;
+        line-height: 1.85;
+        padding: 0 $aside-padding-horizontal;
+        text-decoration: none;
+        text-transform: capitalize;
+        transition: opacity 0.2s ease-out;
+        white-space: nowrap;
+
+        &:hover {
+          opacity: 0.7;
+        }
       }
 
       .icon {
@@ -91,7 +106,7 @@ aside {
       color: $menu-color;
       display: inline-flex;
       line-height: 1.85;
-      padding: 0 1rem;
+      padding: 0 $aside-padding-horizontal;
       margin: 0;
     }
   }
@@ -123,7 +138,7 @@ nav {
 
       &.nav-tags {
         a {
-          font-size: $font-size-2;
+          // font-size: $font-size-2;
         }
       }
     }
