--- a/src/styles/page/_project.scss
+++ b/src/styles/page/_project.scss
@@ -1,7 +1,10 @@
 $ui-transition: transform 0.2s ease, opacity 0.2s ease;
 
-.project {
-  background-color: var(--project-bg-color, black);
+main.project {
+  padding-top: 0;
+}
+
+.project section {
   display: flex;
   flex-direction: column;
   height: 100vh;
@@ -11,19 +14,6 @@ $ui-transition: transform 0.2s ease, opacity 0.2s ease;
 
   header {
     display: block !important;
-    left: 0;
-    opacity: 0;
-    position: fixed;
-    right: 0;
-    transform: translate3d(0, -10px, 0);
-    transition: $ui-transition;
-    top: 0;
-    z-index: 1;
-
-    &.is-active {
-      opacity: 1;
-      transform: translate3d(0, 0, 0);
-    }
 
     &:before {
       background-image: linear-gradient(
