--- a/src/styles/components/_carousel.scss
+++ b/src/styles/components/_carousel.scss
@@ -1,15 +1,29 @@
 .rb-carousel {
   display: flex;
   height: 100%;
+  position: relative;
+  transform: none !important;
 
   > * {
-    background-color: hsl(0, 0%, 98%);
+    // background-color: hsl(0, 0%, 98%);
     min-width: 100%;
   }
 
   figure {
+    height: 100%;
+    left: 0;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    transition: opacity 0.5s;
+    width: 100%;
+
     @include respond-to(desktop) {
-      display: flex;
+      display: flex; // ??
+    }
+
+    &.is-selected {
+      opacity: 1;
     }
 
     img {
@@ -25,15 +39,13 @@
   }
 
   &-button {
-    bottom: 0;
-    display: flex;
-    align-items: center;
     position: absolute;
-    top: 0;
-    width: 35vw;
+    top: 50%;
+    transform: translateY(-50%);
+    z-index: 3;
 
     &[disabled] {
-      opacity: 0;
+      opacity: 0.2;
       pointer-events: none;
     }
 
