--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -1,5 +1,7 @@
 $gutter-size-sm: 2rem;
 $gutter-size: 3rem;
+$card-height-mobile: 275px;
+$card-hover-scale: 1.05;
 
 .gallery-wrapper {
   margin: 0 auto;
@@ -53,69 +55,55 @@ $gutter-size: 3rem;
 .gallery-grid {
   display: none;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-gap: 3rem 2rem;
+  grid-gap: 6rem 3rem;
 
   &.active {
     display: grid;
   }
+}
 
-  .card {
-    margin: 0;
-    position: relative;
+.gallery-grid-item {
+  a {
+    display: block;
+    text-decoration: none;
 
-    + .card {
-      margin: 0;
-    }
-
-    @include respond-to("desktop") {
-      // margin-bottom: $gutter-size;
-    }
-
-    &:after {
-      background-color: hsla(0, 0%, 100%, 0.2);
-      bottom: 0;
-      // content: "";
-      left: 0;
-      opacity: 0;
-      position: absolute;
-      right: 0;
-      top: 0;
-      transition: opacity var(--transition-speed)
-        var(--transition-timing-function);
-    }
-
-    @include respond-to("desktop") {
-      &:hover {
-        &:after {
-          opacity: 1;
-        }
-
-        figcaption {
-          &:after {
-            opacity: 0.8;
-          }
-        }
+    &:hover {
+      figure {
+        transform: scale($card-hover-scale);
       }
-    }
 
-    figure {
       img {
-        opacity: 0;
-        transition: opacity 1s ease-in-out;
+        transform: scale(1 / $card-hover-scale);
+      }
 
-        &.active {
-          opacity: 1;
-        }
-
-        &:not(:first-child) {
-          bottom: 0;
-          left: 0;
-          position: absolute;
-          right: 0;
-          top: 0;
-        }
+      h4 {
+        color: #1473ff;
       }
     }
+  }
+
+  figure {
+    align-items: center;
+    display: flex;
+    height: $card-height-mobile;
+    justify-content: center;
+    overflow: hidden;
+    position: relative;
+    transition: transform 0.5s;
+    width: 100%;
+  }
+
+  img {
+    display: block;
+    position: absolute;
+    transition: transform 0.5s;
+  }
+
+  h4 {
+    color: $body-text-color;
+    font-size: $font-size-2;
+    line-height: 2.5;
+    transition: 0.5s ease;
   }
 }
 
@@ -126,13 +114,27 @@ $gutter-size: 3rem;
   &.active {
     display: flex;
   }
+}
 
-  > div {
-    margin-bottom: 1rem;
+.gallery-list-item {
+  margin-bottom: 6rem;
+  overflow: hidden;
+
+  a {
+    color: inherit;
+    display: block;
+    text-decoration: none;
+
+    &:hover {
+      h3 {
+        color: #1473ff;
+      }
+    }
   }
 
   h3 {
     margin-bottom: 0;
+    font-size: $font-size-2;
   }
 
   .images {
@@ -140,12 +142,12 @@ $gutter-size: 3rem;
     overflow-x: scroll;
     overflow-y: hidden;
 
-    a {
-      height: 100px;
+    figure {
+      height: 200px;
       padding: 0.25em 0;
       width: auto;
 
-      + a {
+      + figure {
         margin-left: 0.25rem;
       }
 
@@ -154,16 +156,6 @@ $gutter-size: 3rem;
         height: 100%;
         width: auto;
       }
-    }
-  }
-
-  a {
-    color: hsl(0, 0, 10%);
-    text-decoration: none;
-    transition: color var(--transition-speed) var(--transition-timing-function);
-
-    &:hover {
-      color: hsl(0, 0, 50%);
     }
   }
 }
