--- a/src/styles/page/_project.scss
+++ b/src/styles/page/_project.scss
@@ -57,8 +57,8 @@ main.project {
 
   // injected carousel wrapper
   > div {
-    border-bottom: 1px solid hsla(0, 0, 100%, 0.15);
-    border-top: 1px solid hsla(0, 0, 100%, 0.15);
+    // border-bottom: 1px solid hsla(0, 0, 100%, 0.15);
+    // border-top: 1px solid hsla(0, 0, 100%, 0.15);
     height: 100%;
   }
 
