--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -24,6 +24,7 @@
 @import "components/hamburger";
 @import "components/carousel";
 @import "components/home-carousel";
+@import "components/lightbox";
 
 @import "elements/button";
 
