--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -32,20 +32,14 @@ $header-desktop-width: 250px;
 
 // Menu
 $menu-switch-breakpoint: desktop;
-$aside-width: 320px;
+$aside-width: 16rem;
 $aside-padding-horizontal: 1.5rem;
 $menu-toggle-line-width: 12px;
 
-// $menu-bg-color: hsl(0, 0, 15%);
-$menu-bg-color: hsl(217.9, 49.6%, 34.9%);
-$menu-color: white;
-$active-menu-item-hover-color: hsl(217.9, 49.6%, 30.9%);
-$active-menu-item-bg-color: hsl(217.9, 49.6%, 24.9%);
-
-$menu-bg-color: hsl(0, 0%, 20%);
-$menu-color: hsl(0, 0%, 80%);
-$active-menu-item-hover-color: hsl(0, 0%, 10%);
-$active-menu-item-bg-color: hsl(0, 0%, 10%);
+$menu-bg-color: hsl(0, 0%, 100%);
+$menu-color: hsl(0, 0%, 20%);
+$active-menu-item-hover-color: hsl(0, 0%, 94%);
+$active-menu-item-bg-color: hsl(0, 0%, 100%);
 
 :root {
   --base-font-size-mobile: #{$base-font-size-mobile};
