Add parallax to images

--- a/src/styles/components/_gallery.scss
+++ b/src/styles/components/_gallery.scss
@@ -80,7 +80,7 @@ $card-hover-scale: 1.05;
 
     &:hover {
       img {
-        transform: scale($card-hover-scale);
+        // transform: scale($card-hover-scale);
       }
 
       h4 {
